db생성 및 저장 경로 설정

--- a/단어장.ipynb
+++ b/단어장.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyMRH4crHYTklIJy2wBxgHyE",
+      "authorship_tag": "ABX9TyPcYc6e8K+qv2ODAXIZ9QMc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -141,9 +141,107 @@
     },
     {
       "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "import sqlite3\n",
+        "import os\n",
+        "\n",
+        "# Google 드라이브 마운트\n",
+        "drive.mount('/content/drive')\n",
+        "\n",
+        "# 데이터베이스 파일명과 드라이브 경로 설정\n",
+        "db_name = 'quiz.db'\n",
+        "drive_path = '/content/drive/My Drive/'  # 드라이브에 저장될 경로\n",
+        "\n",
+        "# 동일한 파일이 있는지 확인하고 이름 변경\n",
+        "def get_unique_filename(base_name, directory):\n",
+        "    name, ext = os.path.splitext(base_name)\n",
+        "    i = 1\n",
+        "    while os.path.exists(os.path.join(directory, base_name)):\n",
+        "        base_name = f\"{name}{i}{ext}\"\n",
+        "        i += 1\n",
+        "    return base_name\n",
+        "\n",
+        "# 데이터베이스 파일 생성 및 연결\n",
+        "db_file = get_unique_filename(db_name, drive_path)\n",
+        "conn = sqlite3.connect(db_file)\n",
+        "cur = conn.cursor()\n",
+        "\n",
+        "# 기존 테이블을 제거하고 새롭게 생성하는 스크립트\n",
+        "cur.execute('DROP TABLE IF EXISTS Questions')\n",
+        "cur.execute('DROP TABLE IF EXISTS Answers')\n",
+        "\n",
+        "cur.execute('''\n",
+        "CREATE TABLE IF NOT EXISTS Questions (\n",
+        "    question_id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+        "    question TEXT NOT NULL\n",
+        ")\n",
+        "''')\n",
+        "\n",
+        "cur.execute('''\n",
+        "CREATE TABLE IF NOT EXISTS Answers (\n",
+        "    answer_id INTEGER PRIMARY KEY AUTOINCREMENT,\n",
+        "    question_id INTEGER,\n",
+        "    answer TEXT NOT NULL,\n",
+        "    FOREIGN KEY(question_id) REFERENCES Questions(question_id)\n",
+        ")\n",
+        "''')\n",
+        "\n",
+        "# 이중 리스트로 질문과 답을 정의합니다\n",
+        "questions = [\n",
+        "    \"Q1\",\n",
+        "    \"Q2\",\n",
+        "    \"Q3\"\n",
+        "]\n",
+        "answers = [\n",
+        "    [\"A1_1\", \"A1_2\"],  # Q1에 대한 여러 답\n",
+        "    [\"A2_1\"],          # Q2에 대한 한 가지 답\n",
+        "    [\"A3_1\", \"A3_2\", \"A3_3\"]  # Q3에 대한 여러 답\n",
+        "]\n",
+        "\n",
+        "# 리스트의 내용을 테이블에 삽입\n",
+        "def update_db():\n",
+        "    for i, question in enumerate(questions):\n",
+        "        cur.execute(\"INSERT INTO Questions (question) VALUES (?)\", (question,))\n",
+        "        question_id = cur.lastrowid\n",
+        "\n",
+        "        # 각 질문에 대한 여러 답을 Answers 테이블에 추가\n",
+        "        for answer in answers[i]:\n",
+        "            cur.execute(\"INSERT INTO Answers (question_id, answer) VALUES (?, ?)\", (question_id, answer))\n",
+        "\n",
+        "    conn.commit()\n",
+        "    print(\"데이터베이스에 업데이트가 완료되었습니다.\")\n",
+        "\n",
+        "# 데이터베이스 업데이트\n",
+        "update_db()\n",
+        "\n",
+        "# 데이터베이스 연결 종료\n",
+        "conn.close()\n"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LF8208RZoUm_",
+        "outputId": "23ea2377-49df-41d3-9729-76ed108b6bb0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n",
+            "데이터베이스에 업데이트가 완료되었습니다.\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
       "source": [],
       "metadata": {
-        "id": "LF8208RZoUm_"
+        "id": "LtsElwjEw_6g"
       },
       "execution_count": null,
       "outputs": []
